# pythonjourney

./: README.md  pyproject.toml
git_repo_creation/: tutorial.md
my_project/file_generators_project/: file_generators.py  main.py
section10_functions_with_output/assignments/: 1_days_in_month.py  assignment.md
section10_functions_with_output/project/: main.py  test.py
section10_functions_with_output/resources/: 1_function_with_output.py  2_docstring.py
section11_blackjack/: m.py  main.py
section12_scope/project/: logoart.py  main.md  main.py
section12_scope/resources/: 1_local_global_block_scope.py  quiz.py
section13_debugging/assignments/: 1_debugging.py
section13_debugging/resources/: 1_debugging.py
section14_higher_lower_game/: main.py
section15_OOP/coffee-machine/: main.py
section15_OOP/quiz_project/: main.py  question_model.py  quiz_brain.py
section15_OOP/resources/: 1_class_and_object.py  test.py
section16_turtle/: 1.py
section16_turtle/challenges/: 1_draw_square.py  2_draw_dashed_line.py  3_draw_different_shapes.py  4_random_walk.py  5_draw_spirograph.py
section22_exception_and_json/: data.json
section27_flight_deal_finder/: csv_service.py  json_service.py  main.py  notification_manager.py  send_sms_flight_data.csv  send_sms_flight_data.json
section28_create_api_with_flask/: READTHIS_RESTful_api.md  challenge.md  challenge2.md  main.py
section7_hangman/: 1_check_user_answer.py  2_replace_the_blank.py  3_check_if_end.py  4_player_lives.py  4_player_lives_solution_2.py  5 .py  5_finish_off.py
section8_function_inputs/: paint.md
(+180 files in other folders)
